k8s/apps/network-policies/policies.yaml
---
# 1. Bloquer tout le trafic entrant et sortant par défaut
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# 2. Autoriser Traefik à joindre les services (Ingress)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-traefik
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: traefik-system
---
# 3. Autoriser Authelia (Egress) à requêter LLDAP sur le port 3890
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-authelia-to-lldap
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: lldap
    ports:
    - protocol: TCP
      port: 3890
---
# 3bis. Autoriser LLDAP (Ingress) à recevoir les requêtes d'Authelia
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-lldap-from-authelia
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: lldap
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: authelia
    ports:
    - protocol: TCP
      port: 3890
---
# 4. Autoriser la résolution DNS vers CoreDNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
# 5. Autoriser le Webtop à naviguer sur Internet (HTTP/HTTPS)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webtop-internet
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: webtop
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
---
# 6. Autoriser Authelia à vérifier l'heure (NTP) pour la sécurité TOTP
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-ntp
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: UDP
      port: 123
